--- a/Reclaimer.Saber3D/Reclaimer.Saber3D.csproj
+++ b/Reclaimer.Saber3D/Reclaimer.Saber3D.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>Saber3D</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
