--- a/Reclaimer.Saber3D/Reclaimer.Saber3D.csproj
+++ b/Reclaimer.Saber3D/Reclaimer.Saber3D.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+    <PackageReference Include="System.Runtime.Numerics" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Reclaimer\Reclaimer.Blam\Reclaimer.Blam.csproj" />
     <ProjectReference Include="..\..\Reclaimer\Reclaimer.Core\Reclaimer.Core.csproj" />
     <ProjectReference Include="..\..\Reclaimer\Reclaimer\Reclaimer.csproj" />
