Replace Aspose with Assimp. Fix bone transforms. Rewrite exporter.

--- a/LibH2A/LibH2A.csproj
+++ b/LibH2A/LibH2A.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Saber3D</RootNamespace>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
