--- a/Testbed/Testbed.csproj
+++ b/Testbed/Testbed.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="AssimpNet" Version="5.0.0-beta1" />
+    <PackageReference Include="DirectXTexNet" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
