--- a/Index/Index.csproj
+++ b/Index/Index.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="AssimpNet" Version="5.0.0-beta1" />
+    <PackageReference Include="AvalonEdit" Version="6.1.3.50" />
     <PackageReference Include="DebounceThrottle" Version="1.0.0" />
     <PackageReference Include="DirectXTexNet" Version="1.0.3" />
     <PackageReference Include="Fody" Version="6.6.3">
