--- a/Index/Index.csproj
+++ b/Index/Index.csproj
@@ -32,6 +32,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="HelixToolkit.SharpDX.Assimp" Version="2.21.1" />
+    <PackageReference Include="HelixToolkit.Wpf.SharpDX" Version="2.21.1" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.4.1" />
   </ItemGroup>
