Hook up AppVeyor. Fix issue with Preferences loading when deploying as self-contained exe.

--- a/H2AIndex/H2AIndex.csproj
+++ b/H2AIndex/H2AIndex.csproj
@@ -10,6 +10,8 @@
     <Deterministic>False</Deterministic>
     <Platforms>AnyCPU;x64</Platforms>
     <ApplicationIcon>Index.ico</ApplicationIcon>
+    <PublishSingleFile>true</PublishSingleFile>
+    <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
