--- a/H2AIndex/H2AIndex.csproj
+++ b/H2AIndex/H2AIndex.csproj
@@ -6,12 +6,14 @@
     <UseWPF>true</UseWPF>
     <Authors>Haus</Authors>
     <Product>Index</Product>
-    <AssemblyVersion>0.2.*</AssemblyVersion>
+    <AssemblyVersion>0.2.0.*</AssemblyVersion>
     <Deterministic>False</Deterministic>
     <Platforms>AnyCPU;x64</Platforms>
     <ApplicationIcon>Index.ico</ApplicationIcon>
     <PublishSingleFile>true</PublishSingleFile>
     <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+    <FileVersion>0.2.0.*</FileVersion>
+    <Version>0.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
