--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: 0.2.0.{build}
 branches:
   only:
   - master
-  - appveyor
+  - dev
 image: Visual Studio 2022
 configuration: Release
 platform: x64
@@ -11,7 +11,7 @@ assembly_info:
   file: '**\AssemblyInfo.*'
   assembly_version: '{version}'
   assembly_file_version: '{version}'
-  assembly_informational_version: '{version}'
+  assembly_informational_version: '{version}-{branch}'
 dotnet_csproj:
   patch: true
   file: '**\*.csproj'
